# Cannon-rs

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.cannon-builder  LICENSE  Makefile  README.md  build.rs  build.sh  elf2bin.py  mips-unknown-none.json  release-plz.toml  requirements.txt
.github/workflows/: publish-builder-image.yml  release-plz.yml
cannon-heap/: CHANGELOG.md  Cargo.toml
cannon-heap/src/: lib.rs
cannon-io/: CHANGELOG.md  Cargo.toml  README.md
cannon-io/src/: lib.rs  logger.rs
cannon-io/src/oracle/: key.rs  mod.rs  oracle_reader.rs
cannon-io/src/syscalls/: mod.rs  raw.rs
cannon-test/: .gitignore  Cargo.toml  README.md  justfile  preimages.json
cannon-test/src/: main.rs
cargo-cannon/: CHANGELOG.md  Cargo.toml
cargo-cannon/src/: cli.rs  main.rs
preimage-server/: CHANGELOG.md  Cargo.toml
preimage-server/src/: cli.rs  main.rs  preimage_provider.rs
project-template/: Cargo.toml  README.md  cargo-generate.toml  justfile
src/: asm.S  heap.rs  iommu.rs  main.rs
startup/: README.md
