[package]
name = "cargo-cannon"
authors = ["Willem Olding <willemolding@gmail.com>"]
description = "A cargo subcommand for initializing and building Cannon Rust projects"
license = "LGPL-3.0"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.15", features = ["derive"] }
