[package]
name = "preimage-server"
authors = ["Willem Olding <willemolding@gmail.com>"]
license = "LGPL-3.0"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.15", features = ["derive"] }
env_logger = "0.10.0"
hex = "0.4.3"
log = "0.4.19"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["rt", "macros", "fs", "io-util", "signal", "sync", "time"] }
